# go-briefly-bot

./: .env.example  .gitignore  .golangci.yml  AGENTS.md  Dockerfile  Dockerfile.RestAPI  Dockerfile.Telegram  README.md  cliff.toml  compose.yml  docker-compose.yml  go.mod  go.sum  install-hooks.sh  main.go  pom.xml  pyproject.toml  requirements.txt  ruff.toml
.build/: Telegram-build.sh  Telegram-run.sh  Telegram.Dockerfile
.devops/: Telegram-build.sh  Telegram-run.sh  Telegram.Dockerfile
.githooks/: post-checkout  pre-commit
.github/workflows/: build.yml  docker-build.yml  docker-publish.yml  go_build.yml  release.yml
apis/graphql/: main.go
apis/rest/: main.go
briefly/: configuration.go  configuration_test.go  localization.go  logging.go  summarization.go  transcript.go  transcripts.go  utils_string.go  youtube.go  yt-dlp.go
briefly-core/: pom.xml
briefly-dao/: pom.xml
briefly-dao/src/main/resources/: application.yml
briefly-rest-api/: pom.xml
briefly-rest-api/src/main/resources/: application.yml
briefly-summarization/: pom.xml
briefly-telegram/: pom.xml
briefly-telegram/src/main/resources/: application.yml
briefly-transcript/: pom.xml
briefly/summarization/: openai.go
briefly/transcript/: handle.go
briefly/transcript/utils/: transcripts_test.go
briefly/transcript/youtube/: yt-dlp.go
cli/apis/rest/: main.go
cli/telegram/: main.go
cli/telegram/bot/: bot.go
clients/telegram/: main.go
clients/telegram/bot/: bot.go
cmd/apis/rest/: handlers.go  message_handler.go  middleware.go  result_handler.go  server.go
cmd/clients/telegram/: main.go  sender.go
cmd/clients/telegram/bot/: bot.go
cmd/db/: main.go
cmd/workers/loaders/producer/: main.go
cmd/workers/transformer/producer/: main.go
config/: config.go  i18n.go  setup.go
core/: pom.xml
dao/: pom.xml
handlers/: telegram_bot.go
lib/: localization.go  logging.go  utils_string.go  utils_string_test.go
lib/loaders/: loaders.go
lib/loaders/video/: video.go
lib/summarization/: openai.go
lib/transcript/: handle.go
lib/transcript/utils/: transcripts.go  transcripts_test.go
lib/transcript/youtube/: youtube.go  yt-dlp.go
lib/transformers/summarization/: openai.go
lib/video/utils/: transcripts.go  transcripts_test.go
lib/video/youtube/: youtube.go  youtube_test.go
locales/: ar.json  cn.json  de.json  en.json  es.json  fr.json  hi.json  it.json  ja.json  ko.json  locale.ar.yml  locale.cn.yml  locale.de.yml  locale.en.yml  locale.es.yml  locale.fr.yml  locale.hi.yml  locale.it.yml  locale.ja.yml  locale.ko.yml  locale.pt.yml  locale.ru.yml  locale.zh.yml  pt.json  ru.json
pkg/db/: connection.go  dict_client_apps.go  message_history.go  models.go  processing_queue.go  processing_status.go  sources.go  summaries.go
pkg/utils/: chunking.go  config.go  logging.go  rate_limiter.go  validation.go
pkg/workers/: loader.go  rabbitmq.go  transformer.go
rest-api/: pom.xml
scripts/: build.sh  run.sh
services/: summarizer.go  youtube.go
specs/: Cache-Compression.md  Valkey Integration.md
sql/: 001_init_schema.sql  002_seed_data.sql
src/: __init__.py  bot.py  config.py  localization.py  logger.py  main.py  rate_limiter.py  summarization.py  text_utils.py  video_loader.py
src/cache/: __init__.py  base.py  factory.py  in_memory.py  local.py  valkey.py
src/client/telegram/: main.py
src/load/: __init__.py  transcripts.py  video_loader.py  video_provider.py  yt_dlp_logger.py
src/main/resources/: application.properties  application.yml
src/storage/: __init__.py  base.py  local.py  valkey_provider.py
src/test/resources/: application.yml
src/transform/: __init__.py  summarization.py
src/utils/: __init__.py  compression.py  markdown.py  text.py
summarization-service/: pom.xml
telegram-service/: pom.xml
tests/: test_bot.py  test_config.py  test_localization.py  test_main.py  test_rate_limiter.py  test_summarization.py  test_text_utils.py  test_transcripts.py  test_video_loader.py  test_video_provider.py
tests/cache/: test_in_memory.py  test_local.py  test_valkey.py
tests/client/telegram/: test_handlers.py  test_main.py
tests/load/: test_transcripts.py  test_video_loader.py  test_video_provider.py
tests/storage/: test_local_provider.py  test_valkey_provider.py
tests/transform/: test_summarization.py
tests/utils/: test_compression.py  test_markdown.py  test_text.py
transcript-service/: pom.xml
utils/: string_utils.go
(+137 files in other folders)
