[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "go-briefly-bot"
version = "2.1.2"
description = "A Telegram bot that summarizes YouTube and VK Video content using AI"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Oleg Shulyakov"}
]
keywords = [
    "telegram",
    "bot",
    "youtube",
    "summarization",
    "ai",
    "openai",
    "yt-dlp",
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]

dependencies = [
    "python-telegram-bot>=21.0,<22.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "python-i18n[YAML]>=0.3.9",
    "openai>=1.0.0,<2.0.0",
    "yt-dlp>=2025.1.15",
    "Markdown>=3.10.2,<4.0.0",
    "bs4==0.0.2",
    "valkey>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.15.1",
    "pytest>=8.0.0,<9.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.12.0",
    "mypy>=1.8.0",
]

test = [
    "pytest>=8.0.0,<9.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/olegshulyakov/go-briefly-bot"
Repository = "https://github.com/olegshulyakov/go-briefly-bot.git"
Issues = "https://github.com/olegshulyakov/go-briefly-bot/issues"
License = "https://github.com/olegshulyakov/go-briefly-bot/blob/main/LICENSE"

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "i18n.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "yt_dlp.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "markdown.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py311"
line-length = 150
src = ["src", "tests"]
exclude = [
    ".githooks/",
    "*.sh",
    ".venv/",
    "venv/",
]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "B",    # flake8-bugbear
    "C90",  # mccabe complexity
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "PL",   # pylint
]
ignore = []

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.pylint]
max-branches = 12
max-statements = 150
